test/testdata/syntax_errors/break_outside_loop.lox
// error: 'break' can only be used inside a loop
break;
